[package]
name = "reveal-rs-wrapper"
description = "Wrapper around reveal-rs to expose functions in this project"
version = "0.1.0"
authors = ["Svenn-Arne Dragly <dragly@cognite.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]
path = "rust/lib.rs"

[dependencies]
wasm-bindgen = { version = "0.2.65", features = ["serde-serialize"] }
js-sys = "0.3.42"
serde = { version = "1.0.114", features = ["derive"] }
serde_derive = "1.0.104"
console_error_panic_hook = "0.1.6"
serde-wasm-bindgen = "0.1.3"
i3df = { path = "../i3df" }
f3df = { path = "../f3df" }
flatbuffers = "0.6.1"
openctm = { path = "../openctm" }

[dependencies.cached]
version = "0.13.1"
default-features = false

[dependencies.web-sys]
version = "0.3.42"
features = [
  'console',
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
]

[profile.release]
# TODO this enables debug symbols - remove when actually releasing to reduce file size
debug = true
